libs/stringtable/tests/snapshots/sort__sort_containers.snap
---
source: libs/stringtable/tests/sort.rs
expression: stringtable
---
Project {
    inner: InnerProject {
        name: "test",
        packages: [
            Package {
                name: "test",
                keys: [
                    Key {
                        id: "A1",
                        original: Some(
                            "Origin",
                        ),
                        english: None,
                        czech: None,
                        french: None,
                        spanish: None,
                        italian: None,
                        polish: None,
                        portuguese: None,
                        russian: None,
                        german: None,
                        korean: None,
                        japanese: None,
                        chinese: None,
                        chinesesimp: None,
                        turkish: None,
                        swedish: None,
                        slovak: None,
                        serbocroatian: None,
                        norwegian: None,
                        icelandic: None,
                        hungarian: None,
                        greek: None,
                        finnish: None,
                        dutch: None,
                        ukrainian: None,
                        danish: None,
                        bulgarian: None,
                        latin: None,
                    },
                ],
                containers: [
                    Package {
                        name: "A",
                        keys: [
                            Key {
                                id: "A3",
                                original: Some(
                                    "Origin",
                                ),
                                english: None,
                                czech: None,
                                french: None,
                                spanish: None,
                                italian: None,
                                polish: None,
                                portuguese: None,
                                russian: None,
                                german: None,
                                korean: None,
                                japanese: None,
                                chinese: None,
                                chinesesimp: None,
                                turkish: None,
                                swedish: None,
                                slovak: None,
                                serbocroatian: None,
                                norwegian: None,
                                icelandic: None,
                                hungarian: None,
                                greek: None,
                                finnish: None,
                                dutch: None,
                                ukrainian: None,
                                danish: None,
                                bulgarian: None,
                                latin: None,
                            },
                        ],
                        containers: [],
                    },
                    Package {
                        name: "B",
                        keys: [
                            Key {
                                id: "A2",
                                original: None,
                                english: Some(
                                    "EN",
                                ),
                                czech: None,
                                french: None,
                                spanish: None,
                                italian: None,
                                polish: None,
                                portuguese: None,
                                russian: None,
                                german: Some(
                                    "DE",
                                ),
                                korean: None,
                                japanese: None,
                                chinese: None,
                                chinesesimp: None,
                                turkish: None,
                                swedish: None,
                                slovak: None,
                                serbocroatian: None,
                                norwegian: None,
                                icelandic: None,
                                hungarian: None,
                                greek: None,
                                finnish: None,
                                dutch: None,
                                ukrainian: None,
                                danish: None,
                                bulgarian: None,
                                latin: None,
                            },
                            Key {
                                id: "B1",
                                original: Some(
                                    "Origin",
                                ),
                                english: None,
                                czech: None,
                                french: None,
                                spanish: None,
                                italian: None,
                                polish: None,
                                portuguese: None,
                                russian: None,
                                german: None,
                                korean: None,
                                japanese: None,
                                chinese: None,
                                chinesesimp: None,
                                turkish: None,
                                swedish: None,
                                slovak: None,
                                serbocroatian: None,
                                norwegian: None,
                                icelandic: None,
                                hungarian: None,
                                greek: None,
                                finnish: None,
                                dutch: None,
                                ukrainian: None,
                                danish: None,
                                bulgarian: None,
                                latin: None,
                            },
                        ],
                        containers: [],
                    },
                ],
            },
        ],
    },
    path: "/containers.xml",
    keys: {
        "a1": [
            Position {
                start: LineCol(
                    105,
                    (
                        4,
                        18,
                    ),
                ),
                end: LineCol(
                    107,
                    (
                        4,
                        20,
                    ),
                ),
                path: "/containers.xml",
            },
        ],
        "b1": [
            Position {
                start: LineCol(
                    215,
                    (
                        8,
                        22,
                    ),
                ),
                end: LineCol(
                    217,
                    (
                        8,
                        24,
                    ),
                ),
                path: "/containers.xml",
            },
        ],
        "a2": [
            Position {
                start: LineCol(
                    304,
                    (
                        11,
                        22,
                    ),
                ),
                end: LineCol(
                    306,
                    (
                        11,
                        24,
                    ),
                ),
                path: "/containers.xml",
            },
        ],
        "a3": [
            Position {
                start: LineCol(
                    473,
                    (
                        17,
                        22,
                    ),
                ),
                end: LineCol(
                    475,
                    (
                        17,
                        24,
                    ),
                ),
                path: "/containers.xml",
            },
        ],
    },
    source: "<?xml version=\"1.0\" encoding=\"utf-8\" ?>\n<Project name=\"test\">\n    <Package name=\"test\">\n        <Key ID=\"A1\">\n            <Original>Origin</Original>\n        </Key>\n        <Container name=\"B\">\n            <Key ID=\"B1\">\n                <Original>Origin</Original>\n            </Key>\n            <Key ID=\"A2\">\n                <German>DE</German>\n                <English>EN</English>\n            </Key>\n        </Container>\n        <Container name=\"A\">\n            <Key ID=\"A3\">\n                <Original>Origin</Original>\n            </Key>\n        </Container>\n    </Package>\n</Project>\n",
    comments: [],
}
