libs/stringtable/tests/snapshots/sort__sort_gh822-2.snap
---
source: libs/stringtable/tests/sort.rs
expression: out
---
<?xml version="1.0" encoding="utf-8"?>
<Project name="test">
    <Package name="test">
        <!-- a maybe more legitimate use of a comment which gets removed -->
        <Key ID="Comments be gone!">
            <Original>I leave this for later</Original>
            <English>I leave this for later</English>
            <!-- <German>I am totally a correct translated entry waiting for approval!</German> -->
            <!-- <Russian></Russian> -->
            <!-- <Polish></Polish> -->
        </Key>
        <Key ID="I will be empty">
            <Original>hey</Original>
            <English>hey</English>
            <Russian>hey</Russian>
            <German>hey</German>
        </Key>
        <!-- The I copy paste this part of my language entry thing -->
        <Key ID="I will change the xml structure a little">
            <Original></Original>
            <English></English>
            <Czech></Czech>
            <French></French>
        </Key>
        <Key ID="My things get unescaped">
            <Original>&quot;&apos;</Original>
            <English>&quot;&apos;</English>
            <Spanish>"Hello World"</Spanish>
            <Russian>&quot;&apos;</Russian>
            <German>&quot;&apos;</German>
        </Key>
        <!--
        <Key ID="new entry used in future release, not yet used">
            <Original>The future</Original>
            <English>The future</English>
        </Key>
        -->
    </Package>
</Project>
